ansible/roles/common/templates/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TYRELL-FW - [0:0]
-A INPUT -j TYRELL-FW
-A FORWARD -j TYRELL-FW
-A TYRELL-FW -i lo -j ACCEPT
-A TYRELL-FW -p icmp --icmp-type any -j ACCEPT
-A TYRELL-FW -p 50 -j ACCEPT
-A TYRELL-FW -p 51 -j ACCEPT
-A TYRELL-FW -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A TYRELL-FW -p udp -m udp --dport 631 -j ACCEPT
-A TYRELL-FW -p tcp -m tcp --dport 631 -j ACCEPT
-A TYRELL-FW -m state --state ESTABLISHED,RELATED -j ACCEPT
-A TYRELL-FW -m state --state NEW -m tcp -p tcp --dport 25 -j ACCEPT
-A TYRELL-FW -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A TYRELL-FW -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A TYRELL-FW -m state --state NEW -s 127.0.0.0/255.0.0.0 -j ACCEPT
-A TYRELL-FW -m state --state NEW -s 10.4.0.0/255.255.0.0 -j ACCEPT
-A TYRELL-FW -m state --state NEW -s 10.0.0.0/255.255.0.0 -j ACCEPT
-A TYRELL-FW -m state --state NEW -s 220.110.131.40/255.255.255.248 -j ACCEPT
-A TYRELL-FW -m state --state NEW -s 220.110.142.160/255.255.255.248 -j ACCEPT
-A TYRELL-FW -j REJECT --reject-with icmp-host-prohibited
COMMIT
